<resources>
    <string name="app_name">ServiFast</string>
    <string name="app_slogan">A un click de tu servicio ideal</string>
    <string name="usuario">Usuario</string>
    <string name="usuario_ph">Teléfono o email</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasena_ph">******</string>
    <string name="nueva_contraseña">Nueva contraseña</string>
    <string name="repite_nueva_contraseña">Repite la nueva contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Email</string>
    <string name="email_ph">&#64;gmail.com</string>
    <string name="telefono">Teléfono</string>
    <string name="telefono_ph">+34</string>
    <string name="req_contrasena">Tu contraseña debe tener al menos:</string>
    <string name="req_contrasena_list">• 8 carácteres  • 1 número  • 1 símbolo</string>
    <string name="particular">Particular</string>
    <string name="profesional">Profesional</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrasena_olvidada"><u>¿Contraseña olvidada?</u></string>
    <string name="buscar">Buscar</string>
    <string name="categorias">Categorías</string>
    <string name="novedades">Novedades</string>
    <string name="mejor_valorados">Mejor valorados</string>
    <string name="todos_servicios">Todos los servicios</string>
    <string name="busqueda">Búsqueda: </string>
    <string name="hogar">Para hogar</string>
    <string name="personas">Para personas</string>
    <string name="automoviles">Para automóviles</string>
    <string name="transporte">Para transporte</string>
    <string name="digital">Para digital</string>
    <string name="materiales">Para materiales</string>
    <string name="precio_min">Precio min.</string>
    <string name="precio_max">Precio max.</string>
    <string name="ubicacion">Ubicación</string>
    <string name="filtro">Filtro</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="precio_negociable">Precio negociable</string>
    <string name="negociable">Negociable</string>
    <string name="continuar">Continuar</string>
    <string name="comprar">Comprar</string>
    <string name="perfil">Perfil</string>
    <string name="favoritos">Favoritos</string>
    <string name="mis_servicios">Mis servicios</string>
    <string name="configuracion">Configuración</string>
    <string name="comprados">Comprados</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="valoraciones">Valoraciones</string>
    <string name="datos_personales">Datos personales</string>
    <string name="cambiar_contraseña">Cambiar contraseña</string>
    <string name="idioma">Idioma</string>
    <string name="espanol">Español</string>
    <string name="ingles">Inglés</string>

    <!-- ERRORES -->

</resources>
