<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_placeholder"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/app_slogan"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_margin="30dp"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_login"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nueva_contraseña"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/inputNewPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:alpha="0.4"
                android:background="@drawable/bg_input"
                android:hint="@string/contrasena_ph"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="15sp"
                android:layout_marginBottom="26dp"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repite_nueva_contraseña"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/inputRepeatNewPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="26dp"
                android:alpha="0.4"
                android:background="@drawable/bg_input"
                android:hint="@string/contrasena_ph"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="15sp"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/req_contrasena"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/req_contrasena_list"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textAlignment="center"
                android:alpha="0.5"/>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingVertical="8dp"
                android:paddingHorizontal="30dp"
                android:background="@drawable/bg_button_black"
                android:text="@string/guardar"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorOnPrimary"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
