<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_back"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintTop_toBottomOf="@id/btnBack">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nueva_contraseña"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/inputNewPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:alpha="0.4"
            android:background="@drawable/bg_input_sell"
            android:hint="@string/contrasena_ph"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="15sp"
            android:layout_marginBottom="26dp"
            android:maxLines="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repite_nueva_contraseña"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/inputRepeatNewPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="26dp"
            android:alpha="0.4"
            android:background="@drawable/bg_input_sell"
            android:hint="@string/contrasena_ph"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="15sp"
            android:maxLines="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/req_contrasena"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/req_contrasena_list"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:alpha="0.5"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/guardar"
        android:textSize="15sp"
        android:textColor="@color/colorSecondary"
        android:textAlignment="center"
        android:paddingHorizontal="100dp"
        android:paddingVertical="5dp"
        android:background="@drawable/bg_button_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
