<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCerrarSesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="start"
                android:src="@drawable/ic_back"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="25dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingBottom="25dp"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/generic_avatar"
                    android:backgroundTint="@color/colorSeondaryVariant"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tvNombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre"
                        android:textStyle="bold"
                        android:textSize="22sp" />

                    <ImageView
                        android:id="@+id/iconRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:src="@drawable/ic_rating" />
                </LinearLayout>
            </LinearLayout>

            <View style="@style/MenuDivider" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp">
                <TextView style="@style/MenuItem" android:text="@string/perfil" />
            </LinearLayout>
            <View style="@style/MenuDivider" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp">
                <TextView style="@style/MenuItem" android:text="@string/favoritos" />
            </LinearLayout>
            <View style="@style/MenuDivider" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp">
                <TextView style="@style/MenuItem" android:text="@string/mis_servicios" />
            </LinearLayout>
            <View style="@style/MenuDivider" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp">
                <TextView style="@style/MenuItem" android:text="@string/configuracion" />
            </LinearLayout>
            <View style="@style/MenuDivider" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/cerrar_sesion"
        android:textSize="15sp"
        android:textColor="@color/colorError"
        android:textAlignment="center"
        android:paddingHorizontal="100dp"
        android:paddingVertical="5dp"
        android:background="@drawable/bg_input_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
